2005-08-06  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* libpp/symbol_container.cpp:
	* libpp/symbol_container.h: find symbol by source filename, linenr :
	  change public interface to return multiple symbols
	* pp/opannotate.cpp: Fix #1252754

2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opimport.1.in:
	* doc/oprofile.xml: improve documentation about opimport

2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/ui/oprof_start.base.ui: handle ui events help string when using
	  keyboard to navigate through event list

2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libabi/Makefile.am:
	* libabi/abi.cpp:
	* libabi/abi.h:
	* libabi/op_abi.h:
	* libabi/tests/Makefile.am:
	* libabi/op_abi.cpp: removed
	* libabi/op_abi.c: new file, abi file writing in plain C

	* configure.in:
	* daemon/Makefile.am:
	* daemon/oprofiled.c:
	* daemon/liblegacy/Makefile.am:
	* doc/Makefile.am:
	* doc/oprofile.xml: build unconditionnaly libabi

	* doc/opimport.1.in: new file, man page for opimport, need some
	  tweaking probably

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui: add a button to reset the profiling
	  session and an edit field to setup the callgraph depth

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start.cpp: hardcode config directory to /root,
	  rename get_user_filename() to get_config_filename()

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp:

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp: fix detection of stopped daemon. Fix a
	  miscounted interrupt nr after a start/stop/start

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: improve documentation about RTC mode.
