@@ -37,7 +37,7 @@ symbol_entry const * symbol_container::insert(symbol_entry const & symb)
 }
 
 
-symbol_collection
+symbol_collection const
 symbol_container::find(debug_name_id filename, size_t linenr) const
 {
 	build_by_loc();
@@ -52,6 +52,28 @@ symbol_container::find(debug_name_id filename, size_t linenr) const
 	pair<it, it> p_it = symbols_by_loc.equal_range(&symbol);
 	for ( ; p_it.first != p_it.second; ++p_it.first)
 		result.push_back(*p_it.first);
+
+	return result;
+}
+
+
+symbol_collection const
+symbol_container::find(debug_name_id filename) const
+{
+	build_by_loc();
+
+	symbol_entry symbol;
+	symbol.sample.file_loc.filename = filename;
+	symbol.sample.file_loc.linenr = 0;
+
+	typedef symbols_by_loc_t::const_iterator it;
+	it first = symbols_by_loc.lower_bound(&symbol);
+	symbol.sample.file_loc.linenr = size_t(-1);
+	it last  = symbols_by_loc.upper_bound(&symbol);
+
+	symbol_collection result;
+	for ( ; first != last ; ++first)
+		result.push_back(*first);
 
 	return result;
 }
