@@ -47,7 +47,10 @@ public:
 	symbol_entry const * insert(symbol_entry const &);
 
 	/// find the symbols at the given filename and line number, if any
-	symbol_collection find(debug_name_id filename, size_t linenr) const;
+	symbol_collection const find(debug_name_id filename, size_t linenr) const;
+
+	/// find the symbols defined in the given filename, if any
+	symbol_collection const find(debug_name_id filename) const;
 
 	/// find the symbol with the given image_name vma if any
 	symbol_entry const * find_by_vma(std::string const & image_name,
